--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
         </dependency>
 
         <dependency>
+            <groupId>uk.ac.standrews.cs</groupId>
+            <artifactId>common-test</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.gedcom4j</groupId>
             <artifactId>gedcom4j</artifactId>
             <version>2.1.8</version>
