--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>3.5.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
