Fix context of base dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   base:
     image: valipop-base
     build:
-      context: docker
+      context: .
+      dockerfile: docker/Dockerfile
   model:
     image: valipop
     build:
