Add build and test CI

--- a/.github/workflows/deploy-model-image.yml
+++ b/.github/workflows/deploy-model-image.yml
@@ -3,7 +3,9 @@ name: Publish ValiPop model image
 # Configures this workflow to run every time a change is pushed to the branch called `master`.
 on:
   push:
-    branches: ['develop']
+    branches: ['master']
+  pull_request:
+    branches: ['master']
 
 env:
   REGISTRY: ghcr.io
