--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,12 +20,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
     - name: Set up JDK 21
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@3b6c050358614dd082e53cdbc55580431fc4e437
       with:
         java-version: '21'
-        distribution: 'temurin'
+        distribution: 'corretto'
         cache: maven
+    - name: Install R
+      uses: r-lib/actions/setup-r@12d8dd416fec5aaa60f2f54609b713b2ec031a94
+      with:
+        r-version: '4.4.2'
+    - name: Install R package
+      run: R -e "install.packages('geepack', repos = c(CRAN = 'https://cloud.r-project.org'))"
+    #- name: Install R package
+      #uses: r-lib/actions/setup-r-dependencies@813ef1cb62cf0b4b51a044419024c37807fa8095
+      #with:
+        #cache-version: 2
+        #extra-packages: |
+          #any::geepack
     - name: Build and test with Maven
       run: mvn -B package --file pom.xml
