--- a/.github/workflows/depoly-search-image.yml
+++ b/.github/workflows/depoly-search-image.yml
@@ -1,11 +1,11 @@
 name: Publish ValiPop factor search images
 
-# Configures this workflow to run every time a change is pushed to the branch called `master`.
+# Configures this workflow to run every time a change is pushed to the branch called `main`.
 on:
   push:
-    branches: [ "master" ]
+    branches: ['main']
   pull_request:
-    branches: [ "master" ]
+    branches: ['main']
 
 env:
   REGISTRY: ghcr.io
@@ -34,7 +34,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build valiPop-base, which is a dependency of multiple images
+      # Build ValiPop-base, which is a dependency of multiple images
       - name: Build base
         run: |
             sudo apt-get update
@@ -49,7 +49,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.LEADER_IMAGE_NAME }}
 
-      - name: Build and push the valiPop leader image
+      - name: Build and push the ValiPop leader image
         id: push-leader
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
@@ -60,7 +60,7 @@ jobs:
           labels: ${{ steps.meta-leader.outputs.labels }}
           ulimit: nofile=65536:65536
       
-      - name: Generate artifact attestation for valiPop leader image
+      - name: Generate artifact attestation for ValiPop leader image
         uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.LEADER_IMAGE_NAME}}
@@ -86,7 +86,7 @@ jobs:
           labels: ${{ steps.meta-worker.outputs.labels }}
           ulimit: nofile=65536:65536
       
-      - name: Generate artifact attestation for valiPop worker image
+      - name: Generate artifact attestation for ValiPop worker image
         uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.WORKER_IMAGE_NAME}}
