--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 
     <properties>
         <repository.type>github</repository.type>
-        <repository.location>https://github.com/stacs-srg/population-model</repository.location>
-        <jdk.version>1.8</jdk.version>
+        <repository.location>https://github.com/stacs-srg/valipop</repository.location>
+        <jdk.version>21</jdk.version>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
     </properties>
